--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack-node-externals": "^1.5.4"
   },
   "dependencies": {
+    "aws-sdk": "^2.48.0",
     "babel-runtime": "^6.23.0",
     "uuid": "^3.0.1"
   }
